@@ -7,6 +7,7 @@ As of $Date: 2008-01-08 15:54:15 +0000 (Tue, 08 Jan 2008) $ $Revision$
 =head2 Changes in 0.1405 (svn rXXX)
 
   Added -g/-pg options to Makefile.PL to enable debug/profiling.
+  Changed memcache object to be blessed hash instead of blessed int.
 
 =head2 Changes in 0.1404 (svn r106) 29th Jan 2008
 
